--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,11 @@ python:
 - '3.4'
 before_install:
 - openssl aes-256-cbc -K $encrypted_26b4962af0e7_key -iv $encrypted_26b4962af0e7_iv
-  -in ci.enc -out ci -d
-- openssl aes-256-cbc -K $encrypted_26b4962af0e7_key -iv $encrypted_26b4962af0e7_iv
-  -in travis.enc -out ~/.ssh/id_rsa -d
+  -in ci.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
-- cp doc/ssh_config ~/.ssh/config
+- cp ssh_config ~/.ssh/config
 - git config --global user.name "xuanwo"
 - git config --global user.email xuanwo.cn@gmail.com
 - git clone -b gh-pages git@github.com:Xuanwo/CommandWiki.git output
