--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: http://cw.xuanwo.org
+url: http://cli.xuanwo.org
 title: Command Wiki
 keywords: wiki, makrdown, linux, CLI
 description: "A wiki for Command"
