--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 url: http://cli.xuanwo.org
-title: Command Wiki
+title: CLI Wiki
 keywords: wiki, makrdown, linux, CLI
-description: "A wiki for Command"
+description: "A wiki for CLI"
 author: Xuanwo
 theme: yasimple
