update travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,5 @@ script:
   - cd ..
   - cp -r themes/yasimple/static output/static
   - simiki generate
-  - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then
-  - exit
-  - fi
-  - cd output
-  - echo "cli.xuanwo.org" >> CNAME
-  - git add --all
-  - git commit -m "Site Update"
-  - git push --force
+  - chmod ugo+x deploy.sh
+  - ./deploy.sh
