--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,8 @@ script:
   - cp -r themes/yasimple/static output/static
   - simiki generate
   - chmod ugo+x deploy.sh
+  - cd output
+  - echo "cli.xuanwo.org" >> CNAME
+  - DATE=`date +%Y-%m-%d`
+  - TIME=`date +%H:%M:%S`
   - ./deploy.sh
