--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ install:
   - pip install simiki
 
 script:
+  - cd output
+  - rm -rf !(.git)
+  - cd ..
   - cp -r themes/yasimple/static output/static
   - simiki generate
   - chmod ugo+x deploy.sh
@@ -32,7 +35,4 @@ script:
   - echo "cli.xuanwo.org" >> CNAME
   - DATE=`date +%Y-%m-%d`
   - TIME=`date +%H:%M:%S`
-  - ls
-  - rm -rf !(.git)
-  - ls
   - ./deploy.sh
