fix https && rebuild the site

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-url: http://cli.xuanwo.org
-title: CLI Wiki
-keywords: wiki, makrdown, linux, CLI
-description: "A wiki for CLI"
+url: https://cli.xuanwo.org
+title: CLI cookbook
+keywords: wiki, makrdown, linux, CLI, cookbook
+description: "CLI cookbook"
 author: Xuanwo
 theme: yasimple
