--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: CLI cookbook
 keywords: wiki, makrdown, linux, CLI, cookbook
 description: "CLI cookbook"
 author: Xuanwo
-theme: yasimple
+theme: yasimple_x2
